--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.10)
 
 project(HTTP-1.1 LANGUAGES CXX)
 
+find_package(OpenSSL REQUIRED)
+find_package(cpr REQUIRED)
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
@@ -16,3 +19,4 @@ set(SOURCES
 )
 
 add_executable(HttpServer ${SOURCES})
+target_link_libraries(HttpServer PRIVATE cpr::cpr)
