--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,45 @@
-cmake_minimum_required(VERSION 3.15)  # 3.15+ recommended for modern features
+cmake_minimum_required(VERSION 3.15)
 
-# Project definition
+# ================================
+# Global settings
+# ================================
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+# ================================
+# Project
+# ================================
 project(HTTP-1.1 
     VERSION 1.0.0
     DESCRIPTION "Minimal HTTP/1.1 Server"
     LANGUAGES CXX
 )
 
-# ================================
-# Global Settings
-# ================================
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)   # No compiler-specific extensions
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
-# Build types
-if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE Release CACHE STRING "Choose Release, Debug, RelWithDebInfo, MinSizeRel" FORCE)
+if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
+    set(CMAKE_BUILD_TYPE Release CACHE STRING
+        "Choose build type: Debug, Release, RelWithDebInfo, MinSizeRel" FORCE)
 endif()
+
+# ================================
+# Compiler checks
+# ================================
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 8.0)
+        message(FATAL_ERROR "GCC >= 8.0 required")
+    endif()
+elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 6.0)
+        message(FATAL_ERROR "Clang >= 6.0 required")
+    endif()
+elseif(MSVC)
+    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 19.20)
+        message(FATAL_ERROR "MSVC >= 19.20 required (Visual Studio 2019+)")
+    endif()
+endif()
+
+message(STATUS "Building ${PROJECT_NAME} v${PROJECT_VERSION} on ${CMAKE_SYSTEM_NAME}/${CMAKE_SYSTEM_PROCESSOR}")
 
 # ================================
 # Sources & Executable
@@ -33,62 +54,62 @@ add_executable(HttpServer ${SOURCES})
 target_include_directories(HttpServer PRIVATE ${CMAKE_SOURCE_DIR}/include)
 
 # ================================
-# Security & Warning Flags
+# Threads
 # ================================
-if (CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
+find_package(Threads REQUIRED)
+target_link_libraries(HttpServer PRIVATE Threads::Threads)
+
+# ================================
+# Warnings & Security flags
+# ================================
+if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
     target_compile_options(HttpServer PRIVATE 
-        -Wall -Wextra -Wpedantic       # Strict warnings
-        -Werror                        # Treat warnings as errors
-        -Wconversion -Wsign-conversion # Catch narrowing/signedness issues
-        -Wshadow                       # Shadowed variables
-        -Wnull-dereference             # Null ptr detection
-        -fstack-protector-strong       # Stack protection
-        -fPIE -fPIC                     # Position independent (security)
-        $<$<CONFIG:Release>:-O2>       # Optimize Release builds
+        -Wall -Wextra -Wpedantic
+        -Werror
+        -Wconversion -Wsign-conversion
+        -Wshadow
+        -Wnull-dereference
+        -fstack-protector-strong
+        -fPIE -fPIC
+        $<$<CONFIG:Release>:-O2>
     )
-elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+elseif(MSVC)
     target_compile_options(HttpServer PRIVATE 
-        /W4 /WX            # Strict warnings, treat as error
-        /permissive-       # Standards compliance
-        /guard:cf          # Control Flow Guard
-        /GS                # Buffer security checks
+        /W4 /WX
+        /permissive-
+        /guard:cf
+        /GS
     )
 endif()
 
 # ================================
-# Static Analysis (Optional)
+# Static analysis (optional)
 # ================================
-# Enable clang-tidy if available
-find_program(CLANG_TIDY_EXE NAMES "clang-tidy")
+find_program(CLANG_TIDY_EXE NAMES clang-tidy)
 if(CLANG_TIDY_EXE)
-    message(STATUS "clang-tidy found: ${CLANG_TIDY_EXE}")
     set_target_properties(HttpServer PROPERTIES CXX_CLANG_TIDY "${CLANG_TIDY_EXE}")
 endif()
 
-# Enable cppcheck if available
-find_program(CPPCHECK_EXE NAMES "cppcheck")
+find_program(CPPCHECK_EXE NAMES cppcheck)
 if(CPPCHECK_EXE)
-    message(STATUS "cppcheck found: ${CPPCHECK_EXE}")
     set(CMAKE_CXX_CPPCHECK "${CPPCHECK_EXE};--enable=all;--inconclusive;--quiet")
 endif()
 
 # ================================
-# Testing Support
+# Tests
 # ================================
 option(BUILD_TESTS "Build unit tests" OFF)
 if(BUILD_TESTS)
     enable_testing()
-    add_subdirectory(tests) # put your tests in /tests folder
+    add_subdirectory(tests)
 endif()
 
 # ================================
-# Install/Export Rules
+# Install
 # ================================
-install(TARGETS HttpServer
-    RUNTIME DESTINATION bin
-)
+install(TARGETS HttpServer RUNTIME DESTINATION bin)
 
 # ================================
-# Packaging (optional for deploy)
+# Packaging
 # ================================
 include(CPack)
